feature: support commit image from container
support 'pouch commit' command, commit a image from a container.
